--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  qrscan: ^0.3.1
+  flutter_automation: ^1.4.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
