--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,7 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
 
   def keystoreProperties = new Properties()
   def keystorePropertiesFile = rootProject.file('key.properties')
@@ -31,8 +32,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
   }
 
-  android {
-              
+android {
+
     compileSdkVersion 30
 
     sourceSets {
@@ -41,8 +42,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.motintegrated.myapp_scanner"
-        minSdkVersion 18
+        applicationId "com.example.motintegrated"
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -52,7 +53,6 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
         release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
             storePassword keystoreProperties['storePassword']
         }
     }
