--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   qrscan: ^0.3.1
-  flutter_automation: ^1.4.0
   intl: ^0.17.0
+  firebase_auth: ^1.0.0
+  firebase_core : ^1.0.3
+  provider: ^5.0.0
+  cloud_firestore: ^1.0.5
 
 dev_dependencies:
   flutter_test:
